# process

./: LICENSE  setup.cfg
scripts/: HyBr.py  dalmatians.py  ds003233.py  forrest.py  forrest_vol2surf.py  hybr-pilot.py  hyperface.py  rename_camcan.py  spacetop.py  whiplash-jane.py
src/process/: anatomy.py  archive.py  compression.py  confound.py  fmriprep.py  main.py  regression.py  resample.py  resample_workflow.py  surface.py  t2star.py  transform.py  volume.py
tests/: test_resample.py
