[metadata]
name = process
version = 0.1.0
author = Ma Feilong
author_email = mafeilong@gmail.com
description = Preprocess fMRI data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = brain, fmri
url = https://feilong.github.io/process/
project_urls =
    Bug Tracker = https://github.com/feilong/process/issues
    Source Code = https://github.com/feilong/process
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =

[options.package_data]

[options.packages.find]
where = src

[options.extras_require]
